--- a/FitnessApp/Pages/ClientTicketsPage.razor.css
+++ b/FitnessApp/Pages/ClientTicketsPage.razor.css
@@ -1,4 +1,11 @@
-﻿th {
+﻿h1 {
+    margin-bottom: 30px;
+    text-align: center;
+    font-weight: bold;
+    font-family: 'Franklin Gothic Medium';
+}
+
+th {
     font-size: 20px;
     text-align: center;
 }
@@ -16,36 +23,6 @@ table {
     margin-bottom: 30px;
     width: 100%;
     text-align: right;
-}
-
-.refresh-table {
-    margin-top: 50px;
-}
-
-.selected {
-    background-color: lightblue;
-    font-weight: bold;
-}
-
-.ticket-type-row {
-    cursor: pointer;
-}
-
-.submit {
-    margin-top: 15px;
-    margin-right: 10px;
-}
-
-h1 {
-    margin-bottom: 30px;
-    text-align: center;
-    font-weight: bold;
-    font-family: 'Franklin Gothic Medium';
-}
-
-.export {
-    float: right;
-    margin-top: 40px;
 }
 
 .fade-in {
