--- a/FitnessApp/Shared/NavMenu.razor
+++ b/FitnessApp/Shared/NavMenu.razor
@@ -31,14 +31,14 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="ticketmanager">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> TicketManager
+            <NavLink class="nav-link" href="clientTickets">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Client Tickets
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="clienttickets">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> ClientTickets
+            <NavLink class="nav-link" href="ticketmanager">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> TicketManager
             </NavLink>
         </div>
 
