--- a/FitnessApp/Pages/TicketTypesPage.razor
+++ b/FitnessApp/Pages/TicketTypesPage.razor
@@ -15,110 +15,111 @@
 
 @if (updateSuccess)
 {
-    <div class="alert alert-success fade-in" role="alert">Updated successfully!</div>
+    <div class="alert alert-success fade-in" role="alert" style="margin-left:@(loaded ? " 15%" : "0")">Updated successfully!</div>
 }
-@if (loaded)
+else if (added)
 {
-    <div class="alert alert-success fade-in" role="alert">Refreshed successfully!</div>
+    <div class="alert alert-success fade-in" role="alert" style="margin-left:@(loaded ? " 15%" : "0")">Added successfully!</div>
 }
 @if (failed)
 {
-    <div class="alert alert-danger fade-in" role="alert">Update failed!</div>
+    <div class="alert alert-danger fade-in" role="alert" style="margin-left:@(loaded ? " 15%" : "0")">Update failed!</div>
+}
+@if (loaded)
+{
+    <div class="alert alert-success fade-in" role="alert">Loaded successfully!</div>
+}
+@if (refresh_clicked)
+{
+    <div class="alert alert-info fade-in" role="alert" style="right: 10px">Loading...</div>
 }
 
-<Tabs>
-    <Tab Title="Manage Ticket Types">
-        <h1>- Manage Ticket Types -</h1>
-        <EditForm Model="@newTicketType" OnValidSubmit="@HandleValidSubmit">
-            <DataAnnotationsValidator />
-            <ValidationSummary />
+<h1>- Ticket Types -</h1>
+<EditForm Model="@newTicketType" OnValidSubmit="@HandleValidSubmit">
+    <DataAnnotationsValidator />
+    <ValidationSummary />
             
-            <div class="form-group">
-                <label for="Name">Name:</label>
-                <InputText class="form-control" id="Name" @bind-Value="newTicketType.Name" placeholder="Ticket name" />
-            </div>
-            <div class="form-group">
-                <label for="Price">Price:</label>
-                <InputNumber class="form-control" id="Price" @bind-Value="newTicketType.Price" />
-            </div>
-            <div class="form-group">
-                <label for="ValidityDays">Validity Days:</label>
-                <InputNumber class="form-control" id="ValidityDays" @bind-Value="newTicketType.ValidityDays" />
-            </div>
-            <div class="form-group">
-                <label for="ValidityEntries">Validity Entries:</label>
-                <InputNumber class="form-control" id="ValidityEntries" @bind-Value="newTicketType.ValidityEntries" />
-            </div>
-            <div class="form-group">
-                <label for="ArenaId">Arena Id:</label>
-                <InputNumber class="form-control" id="ArenaId" @bind-Value="newTicketType.ArenaId" />
-            </div>
-            <div class="form-group">
-                <label for="StartHour">Start Hour:</label>
-                <InputNumber class="form-control" id="StartHour" @bind-Value="newTicketType.StartHour" />
-            </div>
-            <div class="form-group">
-                <label for="EndHour">End Hour:</label>
-                <InputNumber class="form-control" id="EndHour" @bind-Value="newTicketType.EndHour" />
-            </div>
-            <div class="form-group">
-                <label for="EntriesPerDay">Entries Per Day:</label>
-                <InputNumber class="form-control" id="EntriesPerDay" @bind-Value="newTicketType.EntriesPerDay" />
-            </div>
-            @if (myValidator.Validate(newTicketType).IsValid)
-            {
-                <button class="btn btn-primary submit">@(
-                        itemSelected ? "Update" : "Submit"
-                )</button>
-            }
-            else
-            {
-                <button class="btn btn-primary submit" disabled>Submit</button>
-            }
+    <div class="form-group">
+        <label for="Name">Name:</label>
+        <InputText class="form-control" id="Name" @bind-Value="newTicketType.Name" placeholder="Ticket name" />
+    </div>
+    <div class="form-group">
+        <label for="Price">Price:</label>
+        <InputNumber class="form-control" id="Price" @bind-Value="newTicketType.Price" />
+    </div>
+    <div class="form-group">
+        <label for="ValidityDays">Validity Days:</label>
+        <InputNumber class="form-control" id="ValidityDays" @bind-Value="newTicketType.ValidityDays" />
+    </div>
+    <div class="form-group">
+        <label for="ValidityEntries">Validity Entries:</label>
+        <InputNumber class="form-control" id="ValidityEntries" @bind-Value="newTicketType.ValidityEntries" />
+    </div>
+    <div class="form-group">
+        <label for="ArenaId">Arena Id:</label>
+        <InputNumber class="form-control" id="ArenaId" @bind-Value="newTicketType.ArenaId" />
+    </div>
+    <div class="form-group">
+        <label for="StartHour">Start Hour:</label>
+        <InputNumber class="form-control" id="StartHour" @bind-Value="newTicketType.StartHour" />
+    </div>
+    <div class="form-group">
+        <label for="EndHour">End Hour:</label>
+        <InputNumber class="form-control" id="EndHour" @bind-Value="newTicketType.EndHour" />
+    </div>
+    <div class="form-group">
+        <label for="EntriesPerDay">Entries Per Day:</label>
+        <InputNumber class="form-control" id="EntriesPerDay" @bind-Value="newTicketType.EntriesPerDay" />
+    </div>
+    @if (myValidator.Validate(newTicketType).IsValid)
+    {
+        <button class="btn btn-primary submit">@(
+                itemSelected ? "Update" : "Submit"
+        )</button>
+    }
+    else
+    {
+        <button class="btn btn-primary submit" disabled>Submit</button>
+    }
             
-            @if (itemSelected)
-            {
-                <button class="btn btn-danger submit" @onclick="async () => await HandleDelete()">Delete</button>
-            }
-
-            <span>@addText</span>
-        </EditForm>
-        <button class="refresh-table" @onclick="async () => await LoadTicketTypesAsync()">Refresh</button>
-        @*<span>@refreshText</span>*@
-        <table class="ticket_types_table">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Price</th>
-                    <th>ValidityDays</th>
-                    <th>ValidityEntries</th>
-                    <th>IsDeleted</th>
-                    <th>ArenaId</th>
-                    <th>StartHour</th>
-                    <th>EndHour</th>
-                    <th>EntriesPerDay</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var ticketType in ticketTypes)
-                {
-                    <tr @onclick="(() => HandleItemSelected(ticketType.TicketTypeId))"
-                        class="ticket-type-row @((itemSelected && selectedItemId == ticketType.TicketTypeId ? "selected" : ""))">
-                        <td>@ticketType.Name</td>
-                        <td>@ticketType.Price RON</td>
-                        <td>@ticketType.ValidityDays</td>
-                        <td>@ticketType.ValidityEntries</td>
-                        <td>@ticketType.IsDeleted</td>
-                        <td>@ticketType.ArenaId</td>
-                        <td>@ticketType.StartHour</td>
-                        <td>@ticketType.EndHour</td>
-                        <td>@ticketType.EntriesPerDay</td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </Tab>
-</Tabs>
+    @if (itemSelected)
+    {
+        <button class="btn btn-danger submit" @onclick="async () => await HandleDelete()">Delete</button>
+    }
+</EditForm>
+<button class="refresh-table" @onclick="async () => await LoadTicketTypesAsync()">Refresh</button>
+<table class="ticket_types_table">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Price</th>
+            <th>ValidityDays</th>
+            <th>ValidityEntries</th>
+            <th>IsDeleted</th>
+            <th>ArenaId</th>
+            <th>StartHour</th>
+            <th>EndHour</th>
+            <th>EntriesPerDay</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var ticketType in ticketTypes)
+        {
+            <tr @onclick="(() => HandleItemSelected(ticketType.TicketTypeId))"
+                class="ticket-type-row @((itemSelected && selectedItemId == ticketType.TicketTypeId ? "selected" : ""))">
+                <td>@ticketType.Name</td>
+                <td>@ticketType.Price RON</td>
+                <td>@ticketType.ValidityDays</td>
+                <td>@ticketType.ValidityEntries</td>
+                <td>@ticketType.IsDeleted</td>
+                <td>@ticketType.ArenaId</td>
+                <td>@ticketType.StartHour</td>
+                <td>@ticketType.EndHour</td>
+                <td>@ticketType.EntriesPerDay</td>
+            </tr>
+        }
+    </tbody>
+</table>
 
 @code {
     private InputValidator<TicketTypes> myValidator = new InputValidator<TicketTypes>();
@@ -133,12 +134,12 @@
     private bool updateSuccess = false;
     private bool failed = false;
     private bool loaded = false;
+    private bool refresh_clicked = false;
+    private bool added = false;
 
-    private string refreshText = "";
     private int addReturnValue = 0;
     private int updateReturnValue = 0;
     private int deleteReturnValue = 0;
-    private string addText = "";
 
     private void HandleItemSelected(int ticketTypeId)
     {
@@ -146,7 +147,6 @@
         failed = false;
         itemSelected = true;
         selectedItemId = ticketTypeId;
-        addText = "";
         newTicketType = ticketTypes.First(ticket => ticket.TicketTypeId == ticketTypeId);
 
         if (newTicketType == null)
@@ -167,7 +167,7 @@
 
                 if (addReturnValue == 1)
                 {
-                    updateSuccess = true;
+                    added = true;
                 }
                 else
                 {
@@ -192,20 +192,40 @@
                 }
             }
         }
-        await ScrollToTop();
         await LoadTicketTypesAsync();
         itemSelected = false;
         newTicketType = new TicketTypes();
-        await ClosePopup();
     }
 
-    private async Task ClosePopup()
+    private async Task ClosePopup(int type)
     {
         StateHasChanged();
-        await Task.Delay(2000);
-        updateSuccess = false;
-        loaded = false;
-        failed = false;
+        switch (type)
+        {
+            case 1:
+                await Task.Delay(2000);
+                updateSuccess = false;
+                loaded = false;
+                return;
+            case 2:
+                await Task.Delay(2000);
+                added = false;
+                loaded = false;
+                return;
+            case 3:
+                await Task.Delay(2000);
+                failed = false;
+                loaded = false;
+                return;
+            case 4:
+                await Task.Delay(2000);
+                updateSuccess = false;
+                added = false;
+                loaded = false;
+                return;
+            default:
+                return;
+        }
     }
 
     private async Task HandleDelete()
@@ -217,19 +237,10 @@
             deleteReturnValue = await adminDbClient.DeleteEntity<TicketTypes>(selectedItemId);      
         }
 
-        if (deleteReturnValue == 1)
-        {
-            addText = "Successfully updated!";
-        }
-        else if (deleteReturnValue == -1)
-        {
-            addText = "Failure!";
-        }
-        await ScrollToTop();
         await LoadTicketTypesAsync();
         itemSelected = false;
         newTicketType = new TicketTypes();
-        await ClosePopup();
+        await ClosePopup(1);
     }
 
     protected override async Task OnInitializedAsync()
@@ -237,14 +248,9 @@
         await LoadTicketTypesAsync();
     }
 
-    private async Task ScrollToTop()
-    {
-        await JSRuntime.InvokeVoidAsync("window.scrollTo", 0, 0);
-    }
-
     private async Task LoadTicketTypesAsync()
     {
-        refreshText = "Loading...";
+        refresh_clicked = true;
         using (var adminDbClient = new AdminDbClient(new MyDbContext()))
         {
             int act_length = ticketTypes.Count();
@@ -257,8 +263,8 @@
             if (!empty || ticketTypes.Count() > act_length)
             {
                 loaded = true;
-                refreshText = "Success!";
-                await ClosePopup();
+                refresh_clicked = false;
+                await ClosePopup(4);
             }
         }
     }
