--- a/FitnessApp/Pages/TicketTypesPage.razor.css
+++ b/FitnessApp/Pages/TicketTypesPage.razor.css
@@ -47,10 +47,6 @@ h1 {
     animation: fadeIn 1s;
 }
 
-.fade-in {
-    animation: fadeIn 1s;
-}
-
 @keyframes fadeIn {
     0% {
         opacity: 0;
@@ -59,4 +55,11 @@ h1 {
     100% {
         opacity: 1;
     }
+}
+
+.alert {
+    border-radius: 10px;
+    width: max-content;
+    position: fixed;
+    top: 10px;
 }
