--- a/FitnessApp/Shared/MainLayout.razor
+++ b/FitnessApp/Shared/MainLayout.razor
@@ -1,10 +1,19 @@
-﻿@inherits LayoutComponentBase
-
+﻿@using FitnessApp.Data;
+@inherits LayoutComponentBase
+@inject AuthenticationStateProvider AuthenticationStateProvider
 <PageTitle>FitnessApp</PageTitle>
 
 <div class="page">
     <div class="sidebar">
         <NavMenu />
+        <AuthorizeView>
+            <Authorized>
+                <a href="/login" @onclick="(() => Logout())">Logout</a>
+            </Authorized>
+            <NotAuthorized>
+                <a href="/login">Login</a>
+            </NotAuthorized>
+        </AuthorizeView>
     </div>
 
     <main>
@@ -13,3 +22,10 @@
         </article>
     </main>
 </div>
+
+@code{
+    public void Logout()
+    {
+        ((CustomAuthStateProvider)AuthenticationStateProvider).MarkUserAsLoggedOut();
+    }
+}
