--- a/FitnessApp/Shared/NavMenu.razor
+++ b/FitnessApp/Shared/NavMenu.razor
@@ -20,6 +20,12 @@
             </NotAuthorized>
             <Authorized>
                 <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                        <span class="oi oi-home" aria-hidden="true"></span> MyProfile
+                    </NavLink>
+                </div>
+
+                <div class="nav-item px-3">
                     <NavLink class="nav-link" href="ticketTypes">
                         <span class="oi oi-plus" aria-hidden="true"></span> Ticket Types
                     </NavLink>
