--- a/FitnessApp/Pages/TicketTypesPage.razor
+++ b/FitnessApp/Pages/TicketTypesPage.razor
@@ -13,113 +13,121 @@
 
 @inject IJSRuntime JSRuntime
 
-@if (updateSuccess)
-{
-    <div class="alert alert-success fade-in" role="alert" style="margin-left:@(loaded ? " 15%" : "0")">Updated successfully!</div>
-}
-else if (added)
-{
-    <div class="alert alert-success fade-in" role="alert" style="margin-left:@(loaded ? " 15%" : "0")">Added successfully!</div>
-}
-@if (failed)
-{
-    <div class="alert alert-danger fade-in" role="alert" style="margin-left:@(loaded ? " 15%" : "0")">Update failed!</div>
-}
-@if (loaded)
-{
-    <div class="alert alert-success fade-in" role="alert">Loaded successfully!</div>
-}
-@if (refresh_clicked)
-{
-    <div class="alert alert-info fade-in" role="alert" style="right: 10px">Loading...</div>
-}
-
-<h1>- Ticket Types -</h1>
-<EditForm Model="@newTicketType" OnValidSubmit="@HandleValidSubmit">
-    <DataAnnotationsValidator />
-    <ValidationSummary />
-            
-    <div class="form-group">
-        <label for="Name">Name:</label>
-        <InputText class="form-control" id="Name" @bind-Value="newTicketType.Name" placeholder="Ticket name" />
-    </div>
-    <div class="form-group">
-        <label for="Price">Price:</label>
-        <InputNumber class="form-control" id="Price" @bind-Value="newTicketType.Price" />
-    </div>
-    <div class="form-group">
-        <label for="ValidityDays">Validity Days:</label>
-        <InputNumber class="form-control" id="ValidityDays" @bind-Value="newTicketType.ValidityDays" />
-    </div>
-    <div class="form-group">
-        <label for="ValidityEntries">Validity Entries:</label>
-        <InputNumber class="form-control" id="ValidityEntries" @bind-Value="newTicketType.ValidityEntries" />
-    </div>
-    <div class="form-group">
-        <label for="ArenaId">Arena Id:</label>
-        <InputNumber class="form-control" id="ArenaId" @bind-Value="newTicketType.ArenaId" />
-    </div>
-    <div class="form-group">
-        <label for="StartHour">Start Hour:</label>
-        <InputNumber class="form-control" id="StartHour" @bind-Value="newTicketType.StartHour" />
-    </div>
-    <div class="form-group">
-        <label for="EndHour">End Hour:</label>
-        <InputNumber class="form-control" id="EndHour" @bind-Value="newTicketType.EndHour" />
-    </div>
-    <div class="form-group">
-        <label for="EntriesPerDay">Entries Per Day:</label>
-        <InputNumber class="form-control" id="EntriesPerDay" @bind-Value="newTicketType.EntriesPerDay" />
-    </div>
-    @if (myValidator.Validate(newTicketType).IsValid)
-    {
-        <button class="btn btn-primary submit">@(
-                itemSelected ? "Update" : "Submit"
-        )</button>
-    }
-    else
-    {
-        <button class="btn btn-primary submit" disabled>Submit</button>
-    }
-            
-    @if (itemSelected)
-    {
-        <button class="btn btn-danger submit" @onclick="async () => await HandleDelete()">Delete</button>
-    }
-</EditForm>
-<button class="refresh-table" @onclick="async () => await LoadTicketTypesAsync()">Refresh</button>
-<table class="ticket_types_table">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Price</th>
-            <th>ValidityDays</th>
-            <th>ValidityEntries</th>
-            <th>IsDeleted</th>
-            <th>ArenaId</th>
-            <th>StartHour</th>
-            <th>EndHour</th>
-            <th>EntriesPerDay</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var ticketType in ticketTypes)
+<AuthorizeView>
+    <Authorized>
+        @if (updateSuccess)
         {
-            <tr @onclick="(() => HandleItemSelected(ticketType.TicketTypeId))"
-                class="ticket-type-row @((itemSelected && selectedItemId == ticketType.TicketTypeId ? "selected" : ""))">
-                <td>@ticketType.Name</td>
-                <td>@ticketType.Price RON</td>
-                <td>@ticketType.ValidityDays</td>
-                <td>@ticketType.ValidityEntries</td>
-                <td>@ticketType.IsDeleted</td>
-                <td>@ticketType.ArenaId</td>
-                <td>@ticketType.StartHour</td>
-                <td>@ticketType.EndHour</td>
-                <td>@ticketType.EntriesPerDay</td>
-            </tr>
+            <div class="alert alert-success fade-in" role="alert" style="margin-left:@(loaded ? " 15%" : "0")">Updated successfully!</div>
         }
-    </tbody>
-</table>
+        else if (added)
+        {
+            <div class="alert alert-success fade-in" role="alert" style="margin-left:@(loaded ? " 15%" : "0")">Added successfully!</div>
+        }
+        @if (failed)
+        {
+            <div class="alert alert-danger fade-in" role="alert" style="margin-left:@(loaded ? " 15%" : "0")">Update failed!</div>
+        }
+        @if (loaded)
+        {
+            <div class="alert alert-success fade-in" role="alert">Loaded successfully!</div>
+        }
+        @if (refresh_clicked)
+        {
+            <div class="alert alert-info fade-in" role="alert" style="right: 10px">Loading...</div>
+        }
+
+        <h1>- Ticket Types -</h1>
+        <EditForm Model="@newTicketType" OnValidSubmit="@HandleValidSubmit" Context="editFormContext">
+            <DataAnnotationsValidator />
+            <ValidationSummary />
+            
+            <div class="form-group">
+                <label for="Name">Name:</label>
+                <InputText class="form-control" id="Name" @bind-Value="newTicketType.Name" placeholder="Ticket name" />
+            </div>
+            <div class="form-group">
+                <label for="Price">Price:</label>
+                <InputNumber class="form-control" id="Price" @bind-Value="newTicketType.Price" />
+            </div>
+            <div class="form-group">
+                <label for="ValidityDays">Validity Days:</label>
+                <InputNumber class="form-control" id="ValidityDays" @bind-Value="newTicketType.ValidityDays" />
+            </div>
+            <div class="form-group">
+                <label for="ValidityEntries">Validity Entries:</label>
+                <InputNumber class="form-control" id="ValidityEntries" @bind-Value="newTicketType.ValidityEntries" />
+            </div>
+            <div class="form-group">
+                <label for="ArenaId">Arena Id:</label>
+                <InputNumber class="form-control" id="ArenaId" @bind-Value="newTicketType.ArenaId" />
+            </div>
+            <div class="form-group">
+                <label for="StartHour">Start Hour:</label>
+                <InputNumber class="form-control" id="StartHour" @bind-Value="newTicketType.StartHour" />
+            </div>
+            <div class="form-group">
+                <label for="EndHour">End Hour:</label>
+                <InputNumber class="form-control" id="EndHour" @bind-Value="newTicketType.EndHour" />
+            </div>
+            <div class="form-group">
+                <label for="EntriesPerDay">Entries Per Day:</label>
+                <InputNumber class="form-control" id="EntriesPerDay" @bind-Value="newTicketType.EntriesPerDay" />
+            </div>
+            @if (myValidator.Validate(newTicketType).IsValid)
+            {
+                <button class="btn btn-primary submit">@(
+                        itemSelected ? "Update" : "Submit"
+                )</button>
+            }
+            else
+            {
+                <button class="btn btn-primary submit" disabled>Submit</button>
+            }
+            
+            @if (itemSelected)
+            {
+                <button class="btn btn-danger submit" @onclick="async () => await HandleDelete()">Delete</button>
+            }
+        </EditForm>
+
+        <button class="refresh-table" @onclick="async () => await LoadTicketTypesAsync()">Refresh</button>
+        <table class="ticket_types_table">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Price</th>
+                    <th>ValidityDays</th>
+                    <th>ValidityEntries</th>
+                    <th>IsDeleted</th>
+                    <th>ArenaId</th>
+                    <th>StartHour</th>
+                    <th>EndHour</th>
+                    <th>EntriesPerDay</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var ticketType in ticketTypes)
+                {
+                    <tr @onclick="(() => HandleItemSelected(ticketType.TicketTypeId))"
+                        class="ticket-type-row @((itemSelected && selectedItemId == ticketType.TicketTypeId ? "selected" : ""))">
+                        <td>@ticketType.Name</td>
+                        <td>@ticketType.Price RON</td>
+                        <td>@ticketType.ValidityDays</td>
+                        <td>@ticketType.ValidityEntries</td>
+                        <td>@ticketType.IsDeleted</td>
+                        <td>@ticketType.ArenaId</td>
+                        <td>@ticketType.StartHour</td>
+                        <td>@ticketType.EndHour</td>
+                        <td>@ticketType.EntriesPerDay</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </Authorized>
+    <NotAuthorized>
+        <h2>Please log in to get permission for this page.</h2>
+    </NotAuthorized>
+</AuthorizeView>
 
 @code {
     private InputValidator<TicketTypes> myValidator = new InputValidator<TicketTypes>();
